// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BatchReport Merge multitest merges multitest parts when clicking merge button: after merge 1`] = `
<DocumentFragment>
  <div
    class="batchReport_7gv3ej"
  >
    <nav
      class="toolbar_l6n5rs navbar navbar-expand-md navbar-light"
    >
      <div
        class="filterBox_1kzbnzj"
        style="width: 22em;"
      >
        <div
          class="searchBox_1la7oqf"
        >
          <span>
            <span
              class="searchBoxIcon_ncmdki"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-46"
                class="svg-inline--fa fa-search fa-w-16 "
                data-icon="search"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-46"
                >
                  Search
                </title>
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="searchBoxInfoIcon_107ja4p"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-47"
                class="svg-inline--fa fa-question-circle fa-w-16 "
                data-icon="question-circle"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-47"
                >
                  Click for help
                </title>
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
          <div
            class="searchBoxInner_woxb04"
          >
            <input
              class="searchBoxInput_1oulel0"
              placeholder="Search for tests, or tags..."
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2 collapse navbar-collapse"
      >
        <ul
          class="ms-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-48"
                class="svg-inline--fa fa-chart-bar fa-w-16 toolbarButton_1ueb7gu"
                data-icon="chart-bar"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-48"
                >
                  Switch Panel View
                </title>
                <path
                  d="M500 384c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v308h436zm-308-44v-72c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v72c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0V204c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v136c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v200c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0V108c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v232c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-49"
                class="svg-inline--fa fa-angle-double-down fa-w-10 toolbarButton_1ueb7gu"
                data-icon="angle-double-down"
                data-prefix="fas"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-49"
                >
                  Expand all assertions
                </title>
                <path
                  d="M143 256.3L7 120.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0L313 86.3c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.4 9.5-24.6 9.5-34 .1zm34 192l136-136c9.4-9.4 9.4-24.6 0-33.9l-22.6-22.6c-9.4-9.4-24.6-9.4-33.9 0L160 352.1l-96.4-96.4c-9.4-9.4-24.6-9.4-33.9 0L7 278.3c-9.4 9.4-9.4 24.6 0 33.9l136 136c9.4 9.5 24.6 9.5 34 .1z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-50"
                class="svg-inline--fa fa-angle-double-up fa-w-10 toolbarButton_1ueb7gu"
                data-icon="angle-double-up"
                data-prefix="fas"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-50"
                >
                  Collapse all assertions
                </title>
                <path
                  d="M177 255.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 351.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 425.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1zm-34-192L7 199.7c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l96.4-96.4 96.4 96.4c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9l-136-136c-9.2-9.4-24.4-9.4-33.8 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </li>
          <li
            class="dropdown nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                class="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2 nav-link"
                href="#"
              >
                <svg
                  aria-labelledby="svg-inline--fa-title-51"
                  class="svg-inline--fa fa-tasks fa-w-16 toolbarButton_1ueb7gu"
                  data-icon="tasks"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="svg-inline--fa-title-51"
                  >
                    Preferences
                  </title>
                  <path
                    d="M208 132h288c8.8 0 16-7.2 16-16V76c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16v40c0 8.8 7.2 16 16 16zm0 160h288c8.8 0 16-7.2 16-16v-40c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16v40c0 8.8 7.2 16 16 16zm0 160h288c8.8 0 16-7.2 16-16v-40c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16v40c0 8.8 7.2 16 16 16zM64 368c-26.5 0-48.6 21.5-48.6 48s22.1 48 48.6 48 48-21.5 48-48-21.5-48-48-48zm92.5-299l-72.2 72.2-15.6 15.6c-4.7 4.7-12.9 4.7-17.6 0L3.5 109.4c-4.7-4.7-4.7-12.3 0-17l15.7-15.7c4.7-4.7 12.3-4.7 17 0l22.7 22.1 63.7-63.3c4.7-4.7 12.3-4.7 17 0l17 16.5c4.6 4.7 4.6 12.3-.1 17zm0 159.6l-72.2 72.2-15.7 15.7c-4.7 4.7-12.9 4.7-17.6 0L3.5 269c-4.7-4.7-4.7-12.3 0-17l15.7-15.7c4.7-4.7 12.3-4.7 17 0l22.7 22.1 63.7-63.7c4.7-4.7 12.3-4.7 17 0l17 17c4.6 4.6 4.6 12.2-.1 16.9z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </div>
            <div
              aria-hidden="true"
              class="dropdown_biw13d dropdown-menu dropdown-menu-end"
              data-bs-popper="static"
              role="menu"
              tabindex="-1"
            >
              <h6
                class="dropdown-header"
                tabindex="-1"
              >
                Display preferences
              </h6>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="checkbox"
                  />
                   Display time information
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                  title="You need to specify --code command line argument to use this function."
                >
                  <input
                    class="form-check-input"
                    type="checkbox"
                  />
                   Display file path and code context
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="checkbox"
                  />
                   Show status icons
                </label>
              </button>
              <div
                class="dropdown-divider"
                tabindex="-1"
              />
              <h6
                class="dropdown-header"
                tabindex="-1"
              >
                Navigation preferences
              </h6>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    checked=""
                    class="form-check-input"
                    type="checkbox"
                  />
                   Treeview navigation
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="checkbox"
                  />
                   Hide empty testcases
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="checkbox"
                  />
                   Hide skipped testcases
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="checkbox"
                  />
                   Merge multitest parts
                </label>
              </button>
            </div>
          </li>
          <li
            class="dropdown nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                class="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2 nav-link"
                href="#"
              >
                <svg
                  aria-labelledby="svg-inline--fa-title-52"
                  class="svg-inline--fa fa-filter fa-w-16 toolbarButton_1ueb7gu"
                  data-icon="filter"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="svg-inline--fa-title-52"
                  >
                    Choose filter
                  </title>
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </div>
            <div
              aria-hidden="true"
              class="dropdown_biw13d dropdown-menu"
              data-bs-popper="static"
              role="menu"
              tabindex="-1"
            >
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    checked=""
                    class="form-check-input"
                    name="filter"
                    type="radio"
                    value="all"
                  />
                   All
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    name="filter"
                    type="radio"
                    value="fail"
                  />
                   Failed only
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    name="filter"
                    type="radio"
                    value="pass"
                  />
                   Passed only
                </label>
              </button>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-53"
                class="svg-inline--fa fa-tags fa-w-20 toolbarButton_1ueb7gu"
                data-icon="tags"
                data-prefix="fas"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-53"
                >
                  Display tags
                </title>
                <path
                  d="M497.941 225.941L286.059 14.059A48 48 0 0 0 252.118 0H48C21.49 0 0 21.49 0 48v204.118a48 48 0 0 0 14.059 33.941l211.882 211.882c18.744 18.745 49.136 18.746 67.882 0l204.118-204.118c18.745-18.745 18.745-49.137 0-67.882zM112 160c-26.51 0-48-21.49-48-48s21.49-48 48-48 48 21.49 48 48-21.49 48-48 48zm513.941 133.823L421.823 497.941c-18.745 18.745-49.137 18.745-67.882 0l-.36-.36L527.64 323.522c16.999-16.999 26.36-39.6 26.36-63.64s-9.362-46.641-26.36-63.64L331.397 0h48.721a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-54"
                class="svg-inline--fa fa-info fa-w-6 toolbarButton_1ueb7gu"
                data-icon="info"
                data-prefix="fas"
                role="img"
                viewBox="0 0 192 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-54"
                >
                  Info
                </title>
                <path
                  d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-55"
                class="svg-inline--fa fa-print fa-w-16 toolbarButton_1ueb7gu"
                data-icon="print"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-55"
                >
                  Print page
                </title>
                <path
                  d="M464 192h-16V81.941a24 24 0 0 0-7.029-16.97L383.029 7.029A24 24 0 0 0 366.059 0H88C74.745 0 64 10.745 64 24v168H48c-26.51 0-48 21.49-48 48v132c0 6.627 5.373 12 12 12h52v104c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24V384h52c6.627 0 12-5.373 12-12V240c0-26.51-21.49-48-48-48zm-80 256H128v-96h256v96zM128 224V64h192v40c0 13.2 10.8 24 24 24h40v96H128zm304 72c-13.254 0-24-10.746-24-24s10.746-24 24-24 24 10.746 24 24-10.746 24-24 24z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="buttonsBar_6zsntc"
              href="http://testplan.readthedocs.io"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-56"
                class="svg-inline--fa fa-book fa-w-14 toolbarButton_1ueb7gu"
                data-icon="book"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-56"
                >
                  Documentation
                </title>
                <path
                  d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
                  fill="currentColor"
                />
              </svg>
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="makeStyles-navBreadcrumbs-1"
    >
      <ul
        class="makeStyles-breadcrumbContainer-2"
      >
        <li>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-breadcrumbMenu-4 makeStyles-breadcrumbMenuButton-5"
            style="padding-left: 10px;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-57"
                class="svg-inline--fa fa-home fa-w-18 makeStyles-homeIcon-3"
                data-icon="home"
                data-prefix="fas"
                role="img"
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-57"
                >
                  Home
                </title>
                <path
                  d="M488 312.7V456c0 13.3-10.7 24-24 24H348c-6.6 0-12-5.4-12-12V356c0-6.6-5.4-12-12-12h-72c-6.6 0-12 5.4-12 12v112c0 6.6-5.4 12-12 12H112c-13.3 0-24-10.7-24-24V312.7c0-3.6 1.6-7 4.4-9.3l188-154.8c4.4-3.6 10.8-3.6 15.3 0l188 154.8c2.7 2.3 4.3 5.7 4.3 9.3zm83.6-60.9L488 182.9V44.4c0-6.6-5.4-12-12-12h-56c-6.6 0-12 5.4-12 12V117l-89.5-73.7c-17.7-14.6-43.3-14.6-61 0L4.4 251.8c-5.1 4.2-5.8 11.8-1.6 16.9l25.5 31c4.2 5.1 11.8 5.8 16.9 1.6l235.2-193.7c4.4-3.6 10.8-3.6 15.3 0l235.2 193.7c5.1 4.2 12.7 3.5 16.9-1.6l25.5-31c4.2-5.2 3.4-12.7-1.7-16.9z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </li>
        <li>
          <button
            aria-haspopup="true"
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-breadcrumbMenu-4 makeStyles-breadcrumbMenuButton-5 makeStyles-passed-9"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-8 MuiAvatar-colorDefault"
              >
                TP
              </div>
              <span
                class="makeStyles-passed-9 makeStyles-breadcrumbName-6"
              >
                Multitest Parts Report
              </span>
                   
              <span
                class="makeStyles-passed-9"
              >
                4
              </span>
              <span
                class="makeStyles-unknown-14"
              >
                /
              </span>
              <span
                class="makeStyles-failed-10"
              >
                0
              </span>
            </span>
          </button>
        </li>
      </ul>
    </div>
    <div
      style="display: flex; flex: 1; overflow-y: auto;"
    >
      <div
        style="display: flex;"
      >
        <div
          class="column_8bpvrn-o_O-leftColumn_lzxz1z"
        >
          <ul
            aria-multiselectable="false"
            class="MuiTreeView-root treeView_f54xdp"
            role="tree"
          >
            <li
              aria-expanded="false"
              class="MuiTreeItem-root makeStyles-root-15"
              role="treeitem"
              tabindex="-1"
            >
              <div
                class="MuiTreeItem-content makeStyles-content-16"
              >
                <div
                  class="MuiTreeItem-iconContainer makeStyles-iconContainer-17"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiTypography-root MuiTreeItem-label makeStyles-label-18 MuiTypography-body1"
                >
                  <a
                    class="leafNode_15y551q"
                    draggable="false"
                    href="/testplan/f7a32e1b-8c4d-4a91-b5e6-9d0f1c2a3b4e/3a1b2c3d-4e5f-6a7b-8c9d-0e1f2a3b4c5d"
                  >
                    <div
                      class="d-flex justify-content-between align-items-center"
                      style="height: 1.5em; user-select: none;"
                    >
                      <span
                        class="entryIcon_9gb3m5-o_O-passedBadge_1isorc2-o_O-badge_1nusemj badge bg-secondary rounded-pill"
                        title="multitest"
                      >
                        MT
                      </span>
                      <div
                        class="entryName_1u6ioda-o_O-passed_159jltg"
                        title="SplitMultiTest - passed"
                      >
                        SplitMultiTest
                      </div>
                      <div
                        class="entryIcons_9stzon"
                      >
                        <span
                          class="entryIcon_9gb3m5-o_O-passed_159jltg-o_O-navTime_rnvtmc"
                        />
                        <span
                          class="entryIcon_9gb3m5"
                          title="passed/failed testcases"
                        >
                          <span
                            class="passed_159jltg"
                          >
                            4
                          </span>
                          /
                          <span
                            class="failed_fshwig"
                          >
                            0
                          </span>
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
              <ul
                class="MuiCollapse-root MuiTreeItem-group"
                role="group"
                style="min-height: 0px; height: 0px; transition-duration: 300ms;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <li
                      aria-expanded="false"
                      class="MuiTreeItem-root makeStyles-root-15"
                      role="treeitem"
                      tabindex="-1"
                    >
                      <div
                        class="MuiTreeItem-content makeStyles-content-16"
                      >
                        <div
                          class="MuiTreeItem-iconContainer makeStyles-iconContainer-17"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiTypography-root MuiTreeItem-label makeStyles-label-18 MuiTypography-body1"
                        >
                          <a
                            class="leafNode_15y551q"
                            draggable="false"
                            href="/testplan/f7a32e1b-8c4d-4a91-b5e6-9d0f1c2a3b4e/3a1b2c3d-4e5f-6a7b-8c9d-0e1f2a3b4c5d/a1b2c3d4-1111-4a5b-8c9d-e1f2a3b4c5d6"
                          >
                            <div
                              class="d-flex justify-content-between align-items-center"
                              style="height: 1.5em; user-select: none;"
                            >
                              <span
                                class="entryIcon_9gb3m5-o_O-passedBadge_1isorc2-o_O-badge_1nusemj badge bg-secondary rounded-pill"
                                title="testsuite"
                              >
                                S
                              </span>
                              <div
                                class="entryName_1u6ioda-o_O-passed_159jltg"
                                title="Suite0 - passed"
                              >
                                Suite0
                              </div>
                              <div
                                class="entryIcons_9stzon"
                              >
                                <span
                                  class="entryIcon_9gb3m5-o_O-passed_159jltg-o_O-navTime_rnvtmc"
                                />
                                <span
                                  class="entryIcon_9gb3m5"
                                  title="passed/failed testcases"
                                >
                                  <span
                                    class="passed_159jltg"
                                  >
                                    1
                                  </span>
                                  /
                                  <span
                                    class="failed_fshwig"
                                  >
                                    0
                                  </span>
                                </span>
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </li>
                    <li
                      aria-expanded="true"
                      class="MuiTreeItem-root makeStyles-root-15 Mui-expanded"
                      role="treeitem"
                      tabindex="0"
                    >
                      <div
                        class="MuiTreeItem-content makeStyles-content-16"
                      >
                        <div
                          class="MuiTreeItem-iconContainer makeStyles-iconContainer-17"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiTypography-root MuiTreeItem-label makeStyles-label-18 MuiTypography-body1"
                        >
                          <a
                            class="leafNode_15y551q"
                            draggable="false"
                            href="/testplan/f7a32e1b-8c4d-4a91-b5e6-9d0f1c2a3b4e/4b2c3d4e-5f6a-7b8c-9d0e-1f2a3b4c5d6e/c3d4e5f6-3333-4c7d-0e1f-a3b4c5d6e7f8"
                          >
                            <div
                              class="d-flex justify-content-between align-items-center"
                              style="height: 1.5em; user-select: none;"
                            >
                              <span
                                class="entryIcon_9gb3m5-o_O-passedBadge_1isorc2-o_O-badge_1nusemj badge bg-secondary rounded-pill"
                                title="testsuite"
                              >
                                S
                              </span>
                              <div
                                class="entryName_1u6ioda-o_O-passed_159jltg"
                                title="Suite1 - passed"
                              >
                                Suite1
                              </div>
                              <div
                                class="entryIcons_9stzon"
                              >
                                <span
                                  class="entryIcon_9gb3m5-o_O-passed_159jltg-o_O-navTime_rnvtmc"
                                />
                                <span
                                  class="entryIcon_9gb3m5"
                                  title="passed/failed testcases"
                                >
                                  <span
                                    class="passed_159jltg"
                                  >
                                    3
                                  </span>
                                  /
                                  <span
                                    class="failed_fshwig"
                                  >
                                    0
                                  </span>
                                </span>
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                      <ul
                        class="MuiCollapse-root MuiTreeItem-group"
                        role="group"
                        style="min-height: 0px; height: 0px; transition-duration: 300ms;"
                      >
                        <div
                          class="MuiCollapse-wrapper"
                        >
                          <div
                            class="MuiCollapse-wrapperInner"
                          >
                            <li
                              class="MuiTreeItem-root makeStyles-root-15"
                              role="treeitem"
                              tabindex="-1"
                            >
                              <div
                                class="MuiTreeItem-content makeStyles-content-16"
                              >
                                <div
                                  class="MuiTreeItem-iconContainer makeStyles-iconContainer-17"
                                />
                                <div
                                  class="MuiTypography-root MuiTreeItem-label makeStyles-label-18 MuiTypography-body1"
                                >
                                  <a
                                    class="leafNode_15y551q"
                                    draggable="false"
                                    href="/testplan/f7a32e1b-8c4d-4a91-b5e6-9d0f1c2a3b4e/4b2c3d4e-5f6a-7b8c-9d0e-1f2a3b4c5d6e/c3d4e5f6-3333-4c7d-0e1f-a3b4c5d6e7f8/c1b1a1c1-e1d1-4a1f-c1b1-f1e1d1c1b1a1"
                                  >
                                    <div
                                      class="d-flex justify-content-between align-items-center"
                                      style="height: 1.5em; user-select: none;"
                                    >
                                      <span
                                        class="entryIcon_9gb3m5-o_O-passedBadge_1isorc2-o_O-badge_1nusemj badge bg-secondary rounded-pill"
                                        title="testcase"
                                      >
                                        C
                                      </span>
                                      <div
                                        class="entryName_1u6ioda-o_O-passed_159jltg"
                                        title="case1 - passed"
                                      >
                                        case1
                                      </div>
                                      <div
                                        class="entryIcons_9stzon"
                                      >
                                        <span
                                          class="entryIcon_9gb3m5-o_O-passed_159jltg-o_O-navTime_rnvtmc"
                                        />
                                        <span
                                          class="entryIcon_9gb3m5"
                                          title="passed/failed testcases"
                                        >
                                          <span
                                            class="passed_159jltg"
                                          >
                                            1
                                          </span>
                                          /
                                          <span
                                            class="failed_fshwig"
                                          >
                                            0
                                          </span>
                                        </span>
                                      </div>
                                    </div>
                                  </a>
                                </div>
                              </div>
                            </li>
                            <li
                              class="MuiTreeItem-root makeStyles-root-15"
                              role="treeitem"
                              tabindex="-1"
                            >
                              <div
                                class="MuiTreeItem-content makeStyles-content-16"
                              >
                                <div
                                  class="MuiTreeItem-iconContainer makeStyles-iconContainer-17"
                                />
                                <div
                                  class="MuiTypography-root MuiTreeItem-label makeStyles-label-18 MuiTypography-body1"
                                >
                                  <a
                                    class="leafNode_15y551q"
                                    draggable="false"
                                    href="/testplan/f7a32e1b-8c4d-4a91-b5e6-9d0f1c2a3b4e/3a1b2c3d-4e5f-6a7b-8c9d-0e1f2a3b4c5d/b2c3d4e5-2222-4b6c-9d0e-f2a3b4c5d6e7/c2a2b2c2-d2e2-4f2a-b2c2-d2e2f2a2b2c2"
                                  >
                                    <div
                                      class="d-flex justify-content-between align-items-center"
                                      style="height: 1.5em; user-select: none;"
                                    >
                                      <span
                                        class="entryIcon_9gb3m5-o_O-passedBadge_1isorc2-o_O-badge_1nusemj badge bg-secondary rounded-pill"
                                        title="testcase"
                                      >
                                        C
                                      </span>
                                      <div
                                        class="entryName_1u6ioda-o_O-passed_159jltg"
                                        title="case2 - passed"
                                      >
                                        case2
                                      </div>
                                      <div
                                        class="entryIcons_9stzon"
                                      >
                                        <span
                                          class="entryIcon_9gb3m5-o_O-passed_159jltg-o_O-navTime_rnvtmc"
                                        />
                                        <span
                                          class="entryIcon_9gb3m5"
                                          title="passed/failed testcases"
                                        >
                                          <span
                                            class="passed_159jltg"
                                          >
                                            1
                                          </span>
                                          /
                                          <span
                                            class="failed_fshwig"
                                          >
                                            0
                                          </span>
                                        </span>
                                      </div>
                                    </div>
                                  </a>
                                </div>
                              </div>
                            </li>
                            <li
                              class="MuiTreeItem-root makeStyles-root-15"
                              role="treeitem"
                              tabindex="-1"
                            >
                              <div
                                class="MuiTreeItem-content makeStyles-content-16"
                              >
                                <div
                                  class="MuiTreeItem-iconContainer makeStyles-iconContainer-17"
                                />
                                <div
                                  class="MuiTypography-root MuiTreeItem-label makeStyles-label-18 MuiTypography-body1"
                                >
                                  <a
                                    class="leafNode_15y551q"
                                    draggable="false"
                                    href="/testplan/f7a32e1b-8c4d-4a91-b5e6-9d0f1c2a3b4e/4b2c3d4e-5f6a-7b8c-9d0e-1f2a3b4c5d6e/c3d4e5f6-3333-4c7d-0e1f-a3b4c5d6e7f8/c3a3b3c3-d3e3-4f3a-b3c3-d3e3f3a3b3c3"
                                  >
                                    <div
                                      class="d-flex justify-content-between align-items-center"
                                      style="height: 1.5em; user-select: none;"
                                    >
                                      <span
                                        class="entryIcon_9gb3m5-o_O-passedBadge_1isorc2-o_O-badge_1nusemj badge bg-secondary rounded-pill"
                                        title="testcase"
                                      >
                                        C
                                      </span>
                                      <div
                                        class="entryName_1u6ioda-o_O-passed_159jltg"
                                        title="case3 - passed"
                                      >
                                        case3
                                      </div>
                                      <div
                                        class="entryIcons_9stzon"
                                      >
                                        <span
                                          class="entryIcon_9gb3m5-o_O-passed_159jltg-o_O-navTime_rnvtmc"
                                        />
                                        <span
                                          class="entryIcon_9gb3m5"
                                          title="passed/failed testcases"
                                        >
                                          <span
                                            class="passed_159jltg"
                                          >
                                            1
                                          </span>
                                          /
                                          <span
                                            class="failed_fshwig"
                                          >
                                            0
                                          </span>
                                        </span>
                                      </div>
                                    </div>
                                  </a>
                                </div>
                              </div>
                            </li>
                          </div>
                        </div>
                      </ul>
                    </li>
                  </div>
                </div>
              </ul>
            </li>
          </ul>
        </div>
        <div
          class="column_8bpvrn-o_O-rightColumn_kjdh6t"
        >
          <div
            class="splitter_11em7wq"
          />
        </div>
      </div>
      <h1
        class="message_1s94nt7"
      >
        Please select an entry.
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BatchReport Merge multitest merges multitest parts when clicking merge button: before merge 1`] = `
<DocumentFragment>
  <div
    class="batchReport_7gv3ej"
  >
    <nav
      class="toolbar_l6n5rs navbar navbar-expand-md navbar-light"
    >
      <div
        class="filterBox_1kzbnzj"
        style="width: 22em;"
      >
        <div
          class="searchBox_1la7oqf"
        >
          <span>
            <span
              class="searchBoxIcon_ncmdki"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-34"
                class="svg-inline--fa fa-search fa-w-16 "
                data-icon="search"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-34"
                >
                  Search
                </title>
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="searchBoxInfoIcon_107ja4p"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-35"
                class="svg-inline--fa fa-question-circle fa-w-16 "
                data-icon="question-circle"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-35"
                >
                  Click for help
                </title>
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
          <div
            class="searchBoxInner_woxb04"
          >
            <input
              class="searchBoxInput_1oulel0"
              placeholder="Search for tests, or tags..."
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2 collapse navbar-collapse"
      >
        <ul
          class="ms-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-36"
                class="svg-inline--fa fa-chart-bar fa-w-16 toolbarButton_1ueb7gu"
                data-icon="chart-bar"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-36"
                >
                  Switch Panel View
                </title>
                <path
                  d="M500 384c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v308h436zm-308-44v-72c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v72c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0V204c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v136c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v200c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0V108c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v232c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-37"
                class="svg-inline--fa fa-angle-double-down fa-w-10 toolbarButton_1ueb7gu"
                data-icon="angle-double-down"
                data-prefix="fas"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-37"
                >
                  Expand all assertions
                </title>
                <path
                  d="M143 256.3L7 120.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0L313 86.3c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.4 9.5-24.6 9.5-34 .1zm34 192l136-136c9.4-9.4 9.4-24.6 0-33.9l-22.6-22.6c-9.4-9.4-24.6-9.4-33.9 0L160 352.1l-96.4-96.4c-9.4-9.4-24.6-9.4-33.9 0L7 278.3c-9.4 9.4-9.4 24.6 0 33.9l136 136c9.4 9.5 24.6 9.5 34 .1z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-38"
                class="svg-inline--fa fa-angle-double-up fa-w-10 toolbarButton_1ueb7gu"
                data-icon="angle-double-up"
                data-prefix="fas"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-38"
                >
                  Collapse all assertions
                </title>
                <path
                  d="M177 255.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 351.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 425.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1zm-34-192L7 199.7c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l96.4-96.4 96.4 96.4c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9l-136-136c-9.2-9.4-24.4-9.4-33.8 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </li>
          <li
            class="dropdown nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                class="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2 nav-link"
                href="#"
              >
                <svg
                  aria-labelledby="svg-inline--fa-title-39"
                  class="svg-inline--fa fa-tasks fa-w-16 toolbarButton_1ueb7gu"
                  data-icon="tasks"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="svg-inline--fa-title-39"
                  >
                    Preferences
                  </title>
                  <path
                    d="M208 132h288c8.8 0 16-7.2 16-16V76c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16v40c0 8.8 7.2 16 16 16zm0 160h288c8.8 0 16-7.2 16-16v-40c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16v40c0 8.8 7.2 16 16 16zm0 160h288c8.8 0 16-7.2 16-16v-40c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16v40c0 8.8 7.2 16 16 16zM64 368c-26.5 0-48.6 21.5-48.6 48s22.1 48 48.6 48 48-21.5 48-48-21.5-48-48-48zm92.5-299l-72.2 72.2-15.6 15.6c-4.7 4.7-12.9 4.7-17.6 0L3.5 109.4c-4.7-4.7-4.7-12.3 0-17l15.7-15.7c4.7-4.7 12.3-4.7 17 0l22.7 22.1 63.7-63.3c4.7-4.7 12.3-4.7 17 0l17 16.5c4.6 4.7 4.6 12.3-.1 17zm0 159.6l-72.2 72.2-15.7 15.7c-4.7 4.7-12.9 4.7-17.6 0L3.5 269c-4.7-4.7-4.7-12.3 0-17l15.7-15.7c4.7-4.7 12.3-4.7 17 0l22.7 22.1 63.7-63.7c4.7-4.7 12.3-4.7 17 0l17 17c4.6 4.6 4.6 12.2-.1 16.9z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </div>
            <div
              aria-hidden="true"
              class="dropdown_biw13d dropdown-menu dropdown-menu-end"
              data-bs-popper="static"
              role="menu"
              tabindex="-1"
            >
              <h6
                class="dropdown-header"
                tabindex="-1"
              >
                Display preferences
              </h6>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="checkbox"
                  />
                   Display time information
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                  title="You need to specify --code command line argument to use this function."
                >
                  <input
                    class="form-check-input"
                    type="checkbox"
                  />
                   Display file path and code context
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="checkbox"
                  />
                   Show status icons
                </label>
              </button>
              <div
                class="dropdown-divider"
                tabindex="-1"
              />
              <h6
                class="dropdown-header"
                tabindex="-1"
              >
                Navigation preferences
              </h6>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    checked=""
                    class="form-check-input"
                    type="checkbox"
                  />
                   Treeview navigation
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="checkbox"
                  />
                   Hide empty testcases
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="checkbox"
                  />
                   Hide skipped testcases
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="checkbox"
                  />
                   Merge multitest parts
                </label>
              </button>
            </div>
          </li>
          <li
            class="dropdown nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                class="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2 nav-link"
                href="#"
              >
                <svg
                  aria-labelledby="svg-inline--fa-title-40"
                  class="svg-inline--fa fa-filter fa-w-16 toolbarButton_1ueb7gu"
                  data-icon="filter"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="svg-inline--fa-title-40"
                  >
                    Choose filter
                  </title>
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </div>
            <div
              aria-hidden="true"
              class="dropdown_biw13d dropdown-menu"
              data-bs-popper="static"
              role="menu"
              tabindex="-1"
            >
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    checked=""
                    class="form-check-input"
                    name="filter"
                    type="radio"
                    value="all"
                  />
                   All
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    name="filter"
                    type="radio"
                    value="fail"
                  />
                   Failed only
                </label>
              </button>
              <button
                class="dropdownItem_1h5fos4 dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <label
                  class="filterLabel_1wpifct form-check-label"
                >
                  <input
                    class="form-check-input"
                    name="filter"
                    type="radio"
                    value="pass"
                  />
                   Passed only
                </label>
              </button>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-41"
                class="svg-inline--fa fa-tags fa-w-20 toolbarButton_1ueb7gu"
                data-icon="tags"
                data-prefix="fas"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-41"
                >
                  Display tags
                </title>
                <path
                  d="M497.941 225.941L286.059 14.059A48 48 0 0 0 252.118 0H48C21.49 0 0 21.49 0 48v204.118a48 48 0 0 0 14.059 33.941l211.882 211.882c18.744 18.745 49.136 18.746 67.882 0l204.118-204.118c18.745-18.745 18.745-49.137 0-67.882zM112 160c-26.51 0-48-21.49-48-48s21.49-48 48-48 48 21.49 48 48-21.49 48-48 48zm513.941 133.823L421.823 497.941c-18.745 18.745-49.137 18.745-67.882 0l-.36-.36L527.64 323.522c16.999-16.999 26.36-39.6 26.36-63.64s-9.362-46.641-26.36-63.64L331.397 0h48.721a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-42"
                class="svg-inline--fa fa-info fa-w-6 toolbarButton_1ueb7gu"
                data-icon="info"
                data-prefix="fas"
                role="img"
                viewBox="0 0 192 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-42"
                >
                  Info
                </title>
                <path
                  d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <div
              class="buttonsBar_6zsntc"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-43"
                class="svg-inline--fa fa-print fa-w-16 toolbarButton_1ueb7gu"
                data-icon="print"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-43"
                >
                  Print page
                </title>
                <path
                  d="M464 192h-16V81.941a24 24 0 0 0-7.029-16.97L383.029 7.029A24 24 0 0 0 366.059 0H88C74.745 0 64 10.745 64 24v168H48c-26.51 0-48 21.49-48 48v132c0 6.627 5.373 12 12 12h52v104c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24V384h52c6.627 0 12-5.373 12-12V240c0-26.51-21.49-48-48-48zm-80 256H128v-96h256v96zM128 224V64h192v40c0 13.2 10.8 24 24 24h40v96H128zm304 72c-13.254 0-24-10.746-24-24s10.746-24 24-24 24 10.746 24 24-10.746 24-24 24z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="buttonsBar_6zsntc"
              href="http://testplan.readthedocs.io"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-44"
                class="svg-inline--fa fa-book fa-w-14 toolbarButton_1ueb7gu"
                data-icon="book"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-44"
                >
                  Documentation
                </title>
                <path
                  d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
                  fill="currentColor"
                />
              </svg>
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="makeStyles-navBreadcrumbs-1"
    >
      <ul
        class="makeStyles-breadcrumbContainer-2"
      >
        <li>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-breadcrumbMenu-4 makeStyles-breadcrumbMenuButton-5"
            style="padding-left: 10px;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                aria-labelledby="svg-inline--fa-title-45"
                class="svg-inline--fa fa-home fa-w-18 makeStyles-homeIcon-3"
                data-icon="home"
                data-prefix="fas"
                role="img"
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-45"
                >
                  Home
                </title>
                <path
                  d="M488 312.7V456c0 13.3-10.7 24-24 24H348c-6.6 0-12-5.4-12-12V356c0-6.6-5.4-12-12-12h-72c-6.6 0-12 5.4-12 12v112c0 6.6-5.4 12-12 12H112c-13.3 0-24-10.7-24-24V312.7c0-3.6 1.6-7 4.4-9.3l188-154.8c4.4-3.6 10.8-3.6 15.3 0l188 154.8c2.7 2.3 4.3 5.7 4.3 9.3zm83.6-60.9L488 182.9V44.4c0-6.6-5.4-12-12-12h-56c-6.6 0-12 5.4-12 12V117l-89.5-73.7c-17.7-14.6-43.3-14.6-61 0L4.4 251.8c-5.1 4.2-5.8 11.8-1.6 16.9l25.5 31c4.2 5.1 11.8 5.8 16.9 1.6l235.2-193.7c4.4-3.6 10.8-3.6 15.3 0l235.2 193.7c5.1 4.2 12.7 3.5 16.9-1.6l25.5-31c4.2-5.2 3.4-12.7-1.7-16.9z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </li>
        <li>
          <button
            aria-haspopup="true"
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-breadcrumbMenu-4 makeStyles-breadcrumbMenuButton-5 makeStyles-passed-9"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-8 MuiAvatar-colorDefault"
              >
                TP
              </div>
              <span
                class="makeStyles-passed-9 makeStyles-breadcrumbName-6"
              >
                Multitest Parts Report
              </span>
                   
              <span
                class="makeStyles-passed-9"
              >
                4
              </span>
              <span
                class="makeStyles-unknown-14"
              >
                /
              </span>
              <span
                class="makeStyles-failed-10"
              >
                0
              </span>
            </span>
          </button>
        </li>
      </ul>
    </div>
    <div
      style="display: flex; flex: 1; overflow-y: auto;"
    >
      <div
        style="display: flex;"
      >
        <div
          class="column_8bpvrn-o_O-leftColumn_lzxz1z"
        >
          <ul
            aria-multiselectable="false"
            class="MuiTreeView-root treeView_f54xdp"
            role="tree"
          >
            <li
              aria-expanded="true"
              class="MuiTreeItem-root makeStyles-root-15 Mui-expanded"
              role="treeitem"
              tabindex="-1"
            >
              <div
                class="MuiTreeItem-content makeStyles-content-16"
              >
                <div
                  class="MuiTreeItem-iconContainer makeStyles-iconContainer-17"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiTypography-root MuiTreeItem-label makeStyles-label-18 MuiTypography-body1"
                >
                  <a
                    class="leafNode_15y551q"
                    draggable="false"
                    href="/testplan/f7a32e1b-8c4d-4a91-b5e6-9d0f1c2a3b4e/3a1b2c3d-4e5f-6a7b-8c9d-0e1f2a3b4c5d"
                  >
                    <div
                      class="d-flex justify-content-between align-items-center"
                      style="height: 1.5em; user-select: none;"
                    >
                      <span
                        class="entryIcon_9gb3m5-o_O-passedBadge_1isorc2-o_O-badge_1nusemj badge bg-secondary rounded-pill"
                        title="multitest"
                      >
                        MT
                      </span>
                      <div
                        class="entryName_1u6ioda-o_O-passed_159jltg"
                        title="SplitMultiTest - part(0/2) - passed"
                      >
                        SplitMultiTest - part(0/2)
                      </div>
                      <div
                        class="entryIcons_9stzon"
                      >
                        <span
                          class="entryIcon_9gb3m5-o_O-passed_159jltg-o_O-navTime_rnvtmc"
                        />
                        <span
                          class="entryIcon_9gb3m5"
                          title="passed/failed testcases"
                        >
                          <span
                            class="passed_159jltg"
                          >
                            2
                          </span>
                          /
                          <span
                            class="failed_fshwig"
                          >
                            0
                          </span>
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
              <ul
                class="MuiCollapse-root MuiTreeItem-group"
                role="group"
                style="min-height: 0px; height: 0px; transition-duration: 300ms;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <li
                      aria-expanded="false"
                      class="MuiTreeItem-root makeStyles-root-15"
                      role="treeitem"
                      tabindex="-1"
                    >
                      <div
                        class="MuiTreeItem-content makeStyles-content-16"
                      >
                        <div
                          class="MuiTreeItem-iconContainer makeStyles-iconContainer-17"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiTypography-root MuiTreeItem-label makeStyles-label-18 MuiTypography-body1"
                        >
                          <a
                            class="leafNode_15y551q"
                            draggable="false"
                            href="/testplan/f7a32e1b-8c4d-4a91-b5e6-9d0f1c2a3b4e/3a1b2c3d-4e5f-6a7b-8c9d-0e1f2a3b4c5d/a1b2c3d4-1111-4a5b-8c9d-e1f2a3b4c5d6"
                          >
                            <div
                              class="d-flex justify-content-between align-items-center"
                              style="height: 1.5em; user-select: none;"
                            >
                              <span
                                class="entryIcon_9gb3m5-o_O-passedBadge_1isorc2-o_O-badge_1nusemj badge bg-secondary rounded-pill"
                                title="testsuite"
                              >
                                S
                              </span>
                              <div
                                class="entryName_1u6ioda-o_O-passed_159jltg"
                                title="Suite0 - passed"
                              >
                                Suite0
                              </div>
                              <div
                                class="entryIcons_9stzon"
                              >
                                <span
                                  class="entryIcon_9gb3m5-o_O-passed_159jltg-o_O-navTime_rnvtmc"
                                />
                                <span
                                  class="entryIcon_9gb3m5"
                                  title="passed/failed testcases"
                                >
                                  <span
                                    class="passed_159jltg"
                                  >
                                    1
                                  </span>
                                  /
                                  <span
                                    class="failed_fshwig"
                                  >
                                    0
                                  </span>
                                </span>
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </li>
                    <li
                      aria-expanded="true"
                      class="MuiTreeItem-root makeStyles-root-15 Mui-expanded"
                      role="treeitem"
                      tabindex="0"
                    >
                      <div
                        class="MuiTreeItem-content makeStyles-content-16"
                      >
                        <div
                          class="MuiTreeItem-iconContainer makeStyles-iconContainer-17"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiTypography-root MuiTreeItem-label makeStyles-label-18 MuiTypography-body1"
                        >
                          <a
                            class="leafNode_15y551q"
                            draggable="false"
                            href="/testplan/f7a32e1b-8c4d-4a91-b5e6-9d0f1c2a3b4e/3a1b2c3d-4e5f-6a7b-8c9d-0e1f2a3b4c5d/b2c3d4e5-2222-4b6c-9d0e-f2a3b4c5d6e7"
                          >
                            <div
                              class="d-flex justify-content-between align-items-center"
                              style="height: 1.5em; user-select: none;"
                            >
                              <span
                                class="entryIcon_9gb3m5-o_O-passedBadge_1isorc2-o_O-badge_1nusemj badge bg-secondary rounded-pill"
                                title="testsuite"
                              >
                                S
                              </span>
                              <div
                                class="entryName_1u6ioda-o_O-passed_159jltg"
                                title="Suite1 - passed"
                              >
                                Suite1
                              </div>
                              <div
                                class="entryIcons_9stzon"
                              >
                                <span
                                  class="entryIcon_9gb3m5-o_O-passed_159jltg-o_O-navTime_rnvtmc"
                                />
                                <span
                                  class="entryIcon_9gb3m5"
                                  title="passed/failed testcases"
                                >
                                  <span
                                    class="passed_159jltg"
                                  >
                                    1
                                  </span>
                                  /
                                  <span
                                    class="failed_fshwig"
                                  >
                                    0
                                  </span>
                                </span>
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                      <ul
                        class="MuiCollapse-root MuiTreeItem-group"
                        role="group"
                        style="min-height: 0px; height: 0px; transition-duration: 300ms;"
                      >
                        <div
                          class="MuiCollapse-wrapper"
                        >
                          <div
                            class="MuiCollapse-wrapperInner"
                          >
                            <li
                              class="MuiTreeItem-root makeStyles-root-15"
                              role="treeitem"
                              tabindex="-1"
                            >
                              <div
                                class="MuiTreeItem-content makeStyles-content-16"
                              >
                                <div
                                  class="MuiTreeItem-iconContainer makeStyles-iconContainer-17"
                                />
                                <div
                                  class="MuiTypography-root MuiTreeItem-label makeStyles-label-18 MuiTypography-body1"
                                >
                                  <a
                                    class="leafNode_15y551q"
                                    draggable="false"
                                    href="/testplan/f7a32e1b-8c4d-4a91-b5e6-9d0f1c2a3b4e/3a1b2c3d-4e5f-6a7b-8c9d-0e1f2a3b4c5d/b2c3d4e5-2222-4b6c-9d0e-f2a3b4c5d6e7/c2a2b2c2-d2e2-4f2a-b2c2-d2e2f2a2b2c2"
                                  >
                                    <div
                                      class="d-flex justify-content-between align-items-center"
                                      style="height: 1.5em; user-select: none;"
                                    >
                                      <span
                                        class="entryIcon_9gb3m5-o_O-passedBadge_1isorc2-o_O-badge_1nusemj badge bg-secondary rounded-pill"
                                        title="testcase"
                                      >
                                        C
                                      </span>
                                      <div
                                        class="entryName_1u6ioda-o_O-passed_159jltg"
                                        title="case2 - passed"
                                      >
                                        case2
                                      </div>
                                      <div
                                        class="entryIcons_9stzon"
                                      >
                                        <span
                                          class="entryIcon_9gb3m5-o_O-passed_159jltg-o_O-navTime_rnvtmc"
                                        />
                                        <span
                                          class="entryIcon_9gb3m5"
                                          title="passed/failed testcases"
                                        >
                                          <span
                                            class="passed_159jltg"
                                          >
                                            1
                                          </span>
                                          /
                                          <span
                                            class="failed_fshwig"
                                          >
                                            0
                                          </span>
                                        </span>
                                      </div>
                                    </div>
                                  </a>
                                </div>
                              </div>
                            </li>
                          </div>
                        </div>
                      </ul>
                    </li>
                  </div>
                </div>
              </ul>
            </li>
            <li
              aria-expanded="false"
              class="MuiTreeItem-root makeStyles-root-15"
              role="treeitem"
              tabindex="-1"
            >
              <div
                class="MuiTreeItem-content makeStyles-content-16"
              >
                <div
                  class="MuiTreeItem-iconContainer makeStyles-iconContainer-17"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiTypography-root MuiTreeItem-label makeStyles-label-18 MuiTypography-body1"
                >
                  <a
                    class="leafNode_15y551q"
                    draggable="false"
                    href="/testplan/f7a32e1b-8c4d-4a91-b5e6-9d0f1c2a3b4e/4b2c3d4e-5f6a-7b8c-9d0e-1f2a3b4c5d6e"
                  >
                    <div
                      class="d-flex justify-content-between align-items-center"
                      style="height: 1.5em; user-select: none;"
                    >
                      <span
                        class="entryIcon_9gb3m5-o_O-passedBadge_1isorc2-o_O-badge_1nusemj badge bg-secondary rounded-pill"
                        title="multitest"
                      >
                        MT
                      </span>
                      <div
                        class="entryName_1u6ioda-o_O-passed_159jltg"
                        title="SplitMultiTest - part(1/2) - passed"
                      >
                        SplitMultiTest - part(1/2)
                      </div>
                      <div
                        class="entryIcons_9stzon"
                      >
                        <span
                          class="entryIcon_9gb3m5-o_O-passed_159jltg-o_O-navTime_rnvtmc"
                        />
                        <span
                          class="entryIcon_9gb3m5"
                          title="passed/failed testcases"
                        >
                          <span
                            class="passed_159jltg"
                          >
                            2
                          </span>
                          /
                          <span
                            class="failed_fshwig"
                          >
                            0
                          </span>
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="column_8bpvrn-o_O-rightColumn_kjdh6t"
        >
          <div
            class="splitter_11em7wq"
          />
        </div>
      </div>
      <h1
        class="message_1s94nt7"
      >
        Please select an entry.
      </h1>
    </div>
  </div>
</DocumentFragment>
`;
